--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -62,3 +62,81 @@
     outline: none;
     cursor: pointer;
 }
+
+
+.gpt3__navbar-menu{
+    margin-left: 1rem;
+    display: none;
+    position: relative;
+}
+
+
+.gpt3__navbar-menu svg{
+    cursor: pointer;
+}
+
+
+.gpt3__navbar-menu-container{
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    flex-direction: column;
+
+    text-align: end;
+    padding: 2rem;
+    position: absolute;
+    background: var(--color-footer);
+    top: 40px;
+    right: 0;
+    margin-top: 1rem;
+    min-width: 210px;
+    border-radius: 5px;
+    box-shadow: 0 0 5 rgba(0, 0, 0, 0.2);
+}
+
+
+.gpt3__navbar-menu-container{
+    margin: 0 1rem;
+}
+
+
+.gpt3__navbar-menu-container-links-sign{
+    display: none;
+}
+
+
+@media screen and (max-width:1050px) {
+    .gpt3__navbar-links-container{
+        display: none;
+    }
+
+    .gpt3__navbar-menu{
+        display: flex;
+    }
+}
+
+@media screen and (max-width:700px) {
+    .gpt3__navbar{
+        padding: 2rem 4rem;
+    }
+}
+
+
+@media screen and (max-width:550px) {
+    .gpt3__navbar{
+        padding: 2rem;
+    }
+
+    .gpt3__navbar-sign{
+        display: none;
+    }
+
+    .gpt3__navbar-menu-container{
+        top: 20px;
+    }
+
+
+    .gpt3__navbar-menu-container-links-sign{
+        display: block;
+    }
+}
